--- a/index.html
+++ b/index.html
@@ -19,10 +19,34 @@ Solo a questo punto sarà utile passare alla lettura della lista da un file JSON
 
     <!-- Style -->
     <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <div id="app">
 
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body class="ms_bg_body">
+    <div id="app">
+        <!-- <ul class="p-0">
+            <li v-for="disc in discs">
+                <img :src="disc.poster" :alt="disc.title">
+                <div class="text-white">
+                    <h4>{{ disc.title }}</h4>
+                    <div>{{ disc.author }}</div>
+                    <h4>{{ disc.year }}</h4>
+                </div>
+            </li>
+        </ul> -->
+        <div class="container">
+            <div class="row flex-wrap justify-content-between">
+                <div class="col-3 m-2 p-5 rounded ms_bg_card" v-for="disc in discs">
+                    <img :src="disc.poster" :alt="disc.title">
+                    <div class="text-white text-center mt-3">
+                        <h4>{{ disc.title }}</h4>
+                        <div>{{ disc.author }}</div>
+                        <h4>{{ disc.year }}</h4>
+                    </div>    
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- script -->
