fix: structure of server.php add: button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@ Solo a questo punto sarà utile passare alla lettura della lista da un file JSON
                 <a class="navbar-brand" href="#">
                     <img src="./spotify-logo-png-7053.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top ms_logo">
                 </a>
+                <button class="Btn">
+                    <div class="sign">+</div>
+                    <div class="text">Create</div>
+                </button>
             </div>
         </nav>
         <div class="container">
