--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- Dobbiamo creare una web-app che permetta di leggere e stampare in pagina una lista di dischi presente nel nostro server. -->
-
-<!-- Nello svolgere l’esercizio seguite un approccio graduale.
-Prima assicuratevi che la vostra pagina index.php (il vostro front-end) riesca a comunicare correttamente con il vostro script PHP (le vostre “API”).
-Solo a questo punto sarà utile passare alla lettura della lista da un file JSON. -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +19,9 @@ Solo a questo punto sarà utile passare alla lettura della lista da un file JSON
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="ms_bg_body">
     <div id="app">
@@ -41,12 +38,13 @@ Solo a questo punto sarà utile passare alla lettura della lista da un file JSON
         </nav>
         <div class="container">
             <div class="row flex-wrap justify-content-between">
-                <div class="col-3 mx-2 my-5 px-5 py-4 rounded ms_bg_card" v-for="disc in discs">
+                <div class="col-3 mx-2 my-5 px-5 py-4 rounded ms_bg_card" v-for="(disc,index) in discs">
                     <img :src="disc.poster" :alt="disc.title">
                     <div class="text-white text-center mt-3">
                         <h5 class="fw-bold">{{ disc.title }}</h5>
                         <div class="py-2">{{ disc.author }}</div>
                         <h5 class="fw-bold">{{ disc.year }}</h5>
+                        <div @click="toggleLike(index)"><i :class="disc.like ? 'fa-solid' : 'fa-regular'" class="fa-heart"></i></div>
                     </div>    
                 </div>
             </div>
